# Ocean-Engine

./: .gitignore  CMakeLists.txt  Info.plist  README.md  build_linux.sh  build_mac.sh  build_windows.ps1  launcher_mac.sh
packaging/: README.txt  icon.icns
res/dialogue/: b1_post.dlg  b1_pre.dlg  b2_post.dlg  b2_pre.dlg  b3_post.dlg  b3_pre.dlg  b4_pre.dlg
res/midi/: 01.mid  02.mid  03.mid  04.mid  05.mid  06.mid  07.mid  08.mid  09.mid  10.mid
source/AAAgame/: Config.h  main.c
source/Trifecta/: Trifecta_Directory.c  Trifecta_Time.c
